@@ -102,6 +102,9 @@ VALID_USERS[eval,string]=$USER,domtest,nobody
 # User under which to run solutions (ID or name)
 RUNUSER[string]=domtest
 
+# Run solutions in a chroot environment? (gives better security)
+USE_CHROOT=1
+
 # Maximum seconds available for compiling
 COMPILETIME=30
 
@@ -112,6 +115,8 @@ SOURCESIZE=256
 MEMLIMIT=65536
 
 # Maximum filesize RUNUSER may write in kB
+# This should be greater than the maximum testdata output, otherwise
+# solutions will abort before writing the complete correct output!!
 FILELIMIT=4096
 
 # Maximum no. processes running as RUNUSER
@@ -140,9 +145,10 @@ WARN_MTIME=5
 # Number of minutes pentalty time for a wrong submission
 PENALTY_TIME=20
 
-# Valid file extensions for different languages.
-# Languages separated by spaces, language followed by comma separated list
-# of supported extensions. First extension is used as key.
+# Valid file extensions for different languages (used by submit client/server).
+# Languages separated by spaces, language followed by comma separated
+# list of supported extensions. First extension is used as key. These
+# should match the languages defined in the database.
 LANG_EXTS[string]=C,c C++,cpp,cc,c++ Java,java Pascal,pas,p
 
 # Location of beep binary. Modify here if you changed the installation
@@ -177,14 +183,14 @@ SUBM_VERIFY=1
 # 0 = Never
 # 1 = Only on compilation error(s)
 # 2 = Always
-SHOW_COMPILE=1
+SHOW_COMPILE=2
 
 # Balloons notification.
 # How to notify the contest crew that a team has correctly solved a
 # problem and should receive a balloon. Specify a command which the
 # notification will be piped to or leave empty to disable.
 # Example to notify by e-mail:
-#BALLOON_CMD[string]=mail -s "Balloon notification" domjudge@localhost
+#BALLOON_CMD[string]=mail -s Balloon_notification domjudge@localhost
 # Example to notify by printout:
 #BALLOON_CMD[string]=lpr
 BALLOON_CMD[string]=
