@@ -7,6 +7,7 @@ Version 1.0.0 Release Candidate 2 - CVS
  - Drop checking for existence of testdata in www/jury/checkconfig.php,
    since the webserver doesn't need to be able to read that data.
  - Minor enhancements to the jury webinterface display.
+ - Added config option to disable chroot environment for judging.
 
 Version 1.0.0 Release Candidate 1 - 21 September 2005
 -----------------------------------------------------
